# Autogen_Assignment1

./: main.py  pyproject.toml  streamlit.py
agents/: jd_compare_resume_agent.py  jd_processing_agent.py  resume_processing_agent.py  resume_scoring_agent.py  resume_summary_agent.py
chat_model/: chat_model.py
chroma_resume_db/: chroma.sqlite3
config/: constants.py
memory/: memory_store.py
prompts/: prompts.py
teams/: final_team.py  jd_processing_team.py  resume_scoring_team.py
tools/: parse_documents.py
