[project]
name = "ats-scoring-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "autogen-agentchat>=0.7.2",
    "autogen-core>=0.7.2",
    "autogen-ext>=0.7.2",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]
