[project]
name = "ats-scoring-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.2",
    "autogen-core>=0.7.2",
    "autogen-ext>=0.7.2",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "tiktoken>=0.11.0",
]
